--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "wushan <chiangloveslynn@gmail.com>",
   "private": true,
   "dependencies": {
+    "axios": "^0.15.3",
     "node-sass": "^4.1.1",
     "nuxt": "latest",
     "pug": "^2.0.0-beta6",
