--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.15.3",
+    "bulma": "^0.2.3",
+    "font-awesome": "^4.7.0",
     "node-sass": "^4.1.1",
     "nuxt": "latest",
     "pug": "^2.0.0-beta6",
-    "sass-loader": "^4.1.1"
+    "sass-loader": "^4.1.1",
+    "vue-typewriter": "^2.0.0"
   },
   "scripts": {
     "dev": "nuxt",
