--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "bulma": "^0.2.3",
+    "express": "^4.14.0",
     "font-awesome": "^4.7.0",
     "node-sass": "^4.1.1",
     "nuxt": "latest",
