--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.15.3",
+    "breakpoint-sass": "^2.7.1",
     "bulma": "^0.2.3",
     "express": "^4.14.0",
     "font-awesome": "^4.7.0",
