--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "cleave.js": "^0.7.14",
     "express": "^4.14.0",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.1.1",
     "node-sass": "^4.1.1",
     "nuxt": "latest",
     "pug": "^2.0.0-beta6",
     "qs": "^6.3.0",
     "sass-loader": "^4.1.1",
     "vue-typer": "^1.0.2",
-    "vuelidate": "^0.2.0"
+    "vuelidate": "^0.2.0",
+    "webpack": "^2.1.0-beta.19"
   },
   "scripts": {
     "dev": "nuxt",
