--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "express": "^4.14.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
+    "moment": "^2.17.1",
     "node-sass": "^4.1.1",
     "nuxt": "latest",
     "pug": "^2.0.0-beta6",
     "qs": "^6.3.0",
     "sass-loader": "^4.1.1",
     "vue-typer": "^1.0.2",
+    "vuejs-datepicker": "^0.5.4",
     "vuelidate": "^0.2.0",
     "webpack": "^2.1.0-beta.19"
   },
