--- a/package.json
+++ b/package.json
@@ -19,6 +19,21 @@
     "source-map-support": "^0.4.14"
   },
   "devDependencies": {
+    "axios": "^0.15.3",
+    "breakpoint-sass": "^2.7.1",
+    "bulma": "^0.3.2",
+    "cleave.js": "^0.7.14",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.1.1",
+    "moment": "^2.17.1",
+    "node-sass": "^4.1.1",
+    "nuxt": "latest",
+    "pug": "^2.0.0-beta6",
+    "qs": "^6.3.0",
+    "sass-loader": "^6.0.2",
+    "vue-typer": "^1.0.2",
+    "vuelidate": "^0.2.0",
+    "webpack": "^2.1.0-beta.19",
     "babel-eslint": "^7.1.1",
     "backpack-core": "^0.3.0",
     "eslint": "^3.13.1",
