--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Nuxt.js project",
   "author": "wushan <chiangloveslynn@gmail.com>",
   "private": true,
+  "engines": {
+    "node": "7.x"
+  },
   "scripts": {
     "dev": "backpack dev",
     "build": "nuxt build && backpack build",
-    "start": "nuxt build && cross-env NODE_ENV=production node build/main.js",
+    "start": "nuxt build && cross-env NODE_ENV=production node server.js",
     "generate": "nuxt generate",
     "precommit": "npm run lint",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
@@ -17,7 +20,9 @@
     "cross-env": "^4.0.0",
     "express": "^4.14.0",
     "nuxt": "~0.10.6",
-    "source-map-support": "^0.4.14"
+    "source-map-support": "^0.4.14",
+    "pug": "^2.0.0-beta6",
+    "eslint-loader": "^1.7.1"
   },
   "devDependencies": {
     "breakpoint-sass": "^2.7.1",
@@ -27,7 +32,6 @@
     "jquery": "^3.1.1",
     "moment": "^2.17.1",
     "node-sass": "^4.1.1",
-    "pug": "^2.0.0-beta6",
     "qs": "^6.3.0",
     "sass-loader": "^6.0.2",
     "vue-typer": "^1.0.2",
@@ -37,7 +41,6 @@
     "backpack-core": "^0.3.0",
     "eslint": "^3.13.1",
     "eslint-config-standard": "^10.2.1",
-    "eslint-loader": "^1.7.1",
     "eslint-plugin-html": "^2.0.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-node": "^4.2.2",
