--- a/package.json
+++ b/package.json
@@ -45,6 +45,5 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
